--- a/form_signup_link/index.html
+++ b/form_signup_link/index.html
@@ -279,10 +279,10 @@
                     read the <a href="">Privacy Policy</a>.
                   </p>
                   <button type="submit" id="submit">Proceed</button>
-                  <p>Already have an account? <a href="">Sign In</a></p>
+                  <p>Already have an account? <a href="#">Sign In</a></p>
                   <br />
                 </form>
-                <p class="home-page">Go back to home Page? <a href="/index.html" target="_blank">  Click here.</a></p>
+                <p class="home-page">Go back to home Page? <a href="/index.html" target="_parent">  Click here.</a></p>
               </section>
             </div>
           </section>
