--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           ethic, and unmarched focus are the driving forces behind my journey
           in the world of Software Engineering. I am committed to turning this dreams
           into reality and making a positive impact in the ever-evolving digital
-          landscape.n 
+          landscape.
         </p>
 
         <hr>
@@ -121,9 +121,9 @@
         <p>AltSchool Africa is one community that keeps grooming and bringing the best Tech-savys into the global community.
           I joined Altschool Africa because of my quest and passion for
           technological advancement. I want to play a pivotal role in
-          advanciing the tech ecosystem and I confidently believe that Altschool is that ladder that will push me to the global limelight <br>
+          advanciing the tech ecosystem and I confidently believe that Altschool is that ladder that will push me to the global limelight. <br>
           I am a problem solver with strong passion and drive for growth and a
-          better society. I equally want to change the status quo and make a
+          better society, I equally want to change the status quo and make a
           living for myslf and my family at large.
         </p>
        
